--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -35,9 +35,9 @@
 }
 @media (max-width: 1060px) {
   .section-1 {
+    border-top: none;
     flex-direction: column;
     height: 100%;
-    border-top: none;
     margin-top: 0;
   }
 }
@@ -904,22 +904,74 @@ header {
   }
   .header-wrapper--mobile__navMenu a {
     font-weight: 700;
+    text-decoration: none;
+    color: #211f1a;
+    margin-right: 12px;
   }
   .header-wrapper--mobile__navMenu .hamburgerContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    z-index: 9999;
   }
   .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger {
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     width: 24px;
-    height: 24px;
+    height: 12px;
     color: #fffcfa;
     border: none;
   }
-  .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger .hamburgerBar {
-    width: 12px;
+  .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger__Bar {
+    z-index: 9999;
+    height: 3px;
+    width: 100%;
     background-color: black;
-    height: 8px;
+  }
+  .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger__Bar--active {
+    background-color: white;
+  }
+}
+
+.mobileMenu {
+  display: none;
+}
+@media (max-width: 1060px) {
+  .mobileMenu {
+    height: 0;
+    transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+  }
+  .mobileMenu--active {
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #211f1a;
+    color: white;
+    transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+  }
+  .mobileMenu--active ul {
+    width: 60%;
+    list-style: none;
+    color: white;
+    padding: 0;
+  }
+  .mobileMenu--active ul li {
+    margin: 8px 0;
+    width: 100%;
+    padding: 8px 8px 8px 12px;
+  }
+  .mobileMenu--active ul li:hover {
+    background-color: #294c12;
+  }
+  .mobileMenu--active ul a {
+    color: white;
   }
 }
 
