--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -908,17 +908,15 @@ header {
     color: #211f1a;
     margin-right: 12px;
   }
-  .header-wrapper--mobile__navMenu .hamburgerContainer {
-    z-index: 9999;
-  }
   .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger {
     z-index: 9999;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 24px;
-    height: 12px;
+    height: 24px;
+    padding: 4px 0;
     color: #fffcfa;
     border: none;
   }
@@ -931,6 +929,22 @@ header {
   .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger__Bar--active {
     background-color: white;
   }
+  .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger--active .hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    padding: 4px 0;
+    color: #fffcfa;
+    border: none;
+  }
+  .header-wrapper--mobile__navMenu .hamburgerContainer .hamburger--active .hamburger__Bar {
+    height: 3px;
+    width: 100%;
+    background-color: black;
+  }
 }
 
 .mobileMenu {
@@ -938,7 +952,9 @@ header {
 }
 @media (max-width: 1060px) {
   .mobileMenu {
+    position: absolute;
     height: 0;
+    width: 100vw;
     transition: all 0.5s cubic-bezier(0, 1, 0, 1);
   }
   .mobileMenu--active {
@@ -948,8 +964,9 @@ header {
     align-items: center;
     position: absolute;
     left: 0;
+    right: 0;
     bottom: 0;
-    top: 0;
+    top: 65px;
     width: 100vw;
     height: 100vh;
     background-color: #211f1a;
