--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -54,6 +54,7 @@ header {
       width: 100%;
       padding: 0 24px;
       height: 64px;
+
       &__navMenu {
         display: flex;
         align-items: center;
@@ -63,18 +64,20 @@ header {
           color: colors.$black-theme;
           margin-right: 12px;
         }
+
         .hamburgerContainer {
-          z-index: 9999;
           .hamburger {
             z-index: 9999;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             width: 24px;
-            height: 12px;
+            height: 24px;
+            padding: 4px 0;
             color: colors.$bg-color;
             border: none;
+
             &__Bar {
               z-index: 9999;
               height: 3px;
@@ -94,8 +97,11 @@ header {
 .mobileMenu {
   display: none;
   @media (max-width: $mobile-view) {
-    height: 0;
-    transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+    position: absolute;
+    overflow: hidden;
+    max-height: 0;
+    width: 100vw;
+    transition: all 500ms cubic-bezier(0, 1, 0, 1);
 
     &--active {
       z-index: 1;
@@ -104,13 +110,14 @@ header {
       align-items: center;
       position: absolute;
       left: 0;
+      right: 0;
       bottom: 0;
-      top: 0;
+      top: 65px;
       width: 100vw;
       height: 100vh;
       background-color: colors.$black-theme;
       color: white;
-      transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+      transition: all 500ms cubic-bezier(0, 1, 0, 1);
 
       ul {
         width: 60%;
