--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -37,7 +37,7 @@ $mobile-view: 1060px;
   justify-content: center;
   @media (max-width: $mobile-view) {
     border-top: none;
-    flex-direction: column;
+    flex-direction: column-reverse;
     height: 100%;
     margin-top: 0;
   }
@@ -66,6 +66,7 @@ $mobile-view: 1060px;
         height: 486px;
         justify-content: center;
         border: none;
+        border-radius: 0;
       }
       .svgMapContainer {
         margin-right: 60px;
