--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -852,6 +852,76 @@
   margin: 0;
 }
 
+.accommodation-page {
+  background-color: #fffcfa;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.accommodation-page .bannerLogo {
+  padding: 24px;
+  width: 100%;
+}
+
+.accommodation-description {
+  text-align: center;
+  width: 100%;
+  padding: 0 24px;
+}
+.accommodation-description-content {
+  max-width: 1080px;
+  margin: 160px auto;
+}
+
+.accomInfoSection {
+  margin: 60px 0;
+  width: 100%;
+}
+.accomInfoSection-carousel {
+  margin-top: 60px;
+  background-color: #d9d9d9;
+  width: 100%;
+  height: 600px;
+}
+
+.stayPackageSection {
+  margin: 100px 0;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+.stayPackageSection .typo-h1 {
+  margin-bottom: 72px;
+}
+.stayPackageSection .typo-b2 {
+  max-width: 528px;
+}
+.stayPackageSection-carousel {
+  width: 100%;
+  height: 600px;
+  background-color: #d9d9d9;
+}
+.stayPackageSection-article {
+  margin: 88px 0;
+  height: 344px;
+  display: flex;
+  align-items: center;
+  text-align: left;
+}
+.stayPackageSection-article .typo-b2 {
+  max-width: 528px;
+}
+.stayPackageSection-article div:nth-child(1) {
+  width: 50%;
+}
+.stayPackageSection-article div:nth-child(2) {
+  width: 50%;
+  height: 100%;
+  background-color: #d9d9d9;
+}
+
 header {
   display: flex;
   justify-content: center;
@@ -1210,6 +1280,169 @@ header {
   border-radius: 100px;
 }
 
+.AccomInfoCardContainer {
+  max-width: 1440px;
+  display: flex;
+  text-align: left;
+}
+
+.AccomInfoCard {
+  width: 33%;
+  padding: 16px;
+}
+.AccomInfoCard img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+}
+.AccomInfoCard h4 {
+  padding: 20px 0;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #211f1a;
+}
+
+.btn-primary {
+  padding: 16px 32px;
+  border: 2px solid #211f1a;
+  border-radius: 8px;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: #211f1a;
+  text-decoration: none;
+  font-weight: 500;
+  gap: 18px;
+  cursor: pointer;
+}
+.btn-primary:hover {
+  background: rgba(33, 31, 26, 0.5);
+  color: #211f1a;
+  transition: 200ms;
+}
+.btn-primary:active {
+  background-color: #211f1a;
+  color: white;
+}
+
+.btn-accent {
+  padding: 16px 32px;
+  border: 2px solid #294c12;
+  color: #294c12;
+  border-radius: 8px;
+  text-transform: uppercase;
+  background-color: white;
+  font-weight: 500;
+  gap: 18px;
+  cursor: pointer;
+}
+.btn-accent:hover {
+  background: #294c12;
+  color: white;
+}
+
+.btn-accent--fill {
+  padding: 16px 32px;
+  border: 2px solid #294c12;
+  width: 300px;
+  color: white;
+  border-radius: 8px;
+  text-transform: uppercase;
+  background-color: #294c12;
+  font-weight: 500;
+  cursor: pointer;
+}
+.btn-accent--fill:hover {
+  background-color: #94a689;
+  color: #294c12;
+  transition: 200ms;
+}
+.btn-accent--fill:active {
+  background-color: transparent;
+  color: #294c12;
+  transition: 200ms;
+}
+
+.btn-secondary {
+  padding: 16px 32px;
+  border: 2px solid rgba(33, 31, 26, 0.6);
+  color: rgba(33, 31, 26, 0.6);
+  border-radius: 8px;
+  text-transform: uppercase;
+  background-color: white;
+  font-weight: 500;
+  gap: 18px;
+  cursor: pointer;
+}
+.btn-secondary:hover {
+  background: rgba(33, 31, 26, 0.6);
+  color: white;
+  transition: 200ms;
+}
+
+.btn-negative {
+  padding: 16px 32px;
+  border: 2px solid #ff2f2f;
+  color: #ff2f2f;
+  border-radius: 8px;
+  text-transform: uppercase;
+  background-color: transparent;
+  font-weight: 500;
+  gap: 18px;
+  cursor: pointer;
+}
+.btn-negative:hover {
+  background: rgba(255, 47, 47, 0.5);
+  transition: 200ms;
+}
+.btn-negative:active {
+  background-color: #ff2f2f;
+  color: white;
+  transition: 200ms;
+}
+
+.typo-h1 {
+  font-size: 52px;
+  line-height: 128%;
+  font-weight: 400;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.typo-h2 {
+  font-size: 36px;
+  line-height: 128%;
+}
+
+.typo-h3 {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 128%;
+}
+
+.typo-h4 {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 128%;
+}
+
+.typo-b1 {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+}
+
+.typo-b2 {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 36px;
+}
+
+.typo-link {
+  font-size: 12px;
+  text-decoration: underline;
+  color: #211f1a;
+  cursor: pointer;
+}
+
 *,
 *::after,
 *::before {
@@ -1221,21 +1454,4 @@ body {
   margin: 0;
   background-color: #fffcfa;
   font-family: "Poppins", sans-serif;
-}
-
-.cta-btn {
-  display: inline-block;
-  text-decoration: none;
-  color: #211f1a;
-  font-size: 16px;
-  font-weight: bold;
-  border: 2px solid #211f1a;
-  padding: 16px 32px;
-  border-radius: 8px;
-  transition: 0.5s;
-}
-.cta-btn:hover {
-  background-color: olive;
-  color: white;
-  transition: 0.5s;
 }/*# sourceMappingURL=App.css.map */
