--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -865,6 +865,16 @@
   width: 100%;
 }
 
+.accommodation-page-container {
+  max-width: 1440px;
+}
+
+.heroSection {
+  width: 1440px;
+  height: 600px;
+  background-color: #d9d9d9;
+}
+
 .accommodation-description {
   text-align: center;
   width: 100%;
@@ -878,6 +888,9 @@
 .accomInfoSection {
   margin: 60px 0;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .accomInfoSection-carousel {
   margin-top: 60px;
@@ -888,6 +901,7 @@
 
 .stayPackageSection {
   margin: 100px 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -920,6 +934,110 @@
   width: 50%;
   height: 100%;
   background-color: #d9d9d9;
+}
+
+.eatAndDrink-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  background-color: #fffcfa;
+}
+.eatAndDrink-page-container {
+  max-width: 1440px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bannerLogoContainer {
+  max-width: 100%;
+}
+
+.bannerLogo {
+  width: 100%;
+  padding: 24px;
+}
+
+.eatAndDrink-heroSection {
+  width: 1440px;
+  height: 600px;
+  background-color: #d9d9d9;
+}
+.eatAndDrink-welcomeSection {
+  margin: 60px 0 160px;
+  max-width: 1200px;
+}
+.eatAndDrink-welcomeSection p {
+  margin: 40px 0;
+}
+.eatAndDrink-featuredSection {
+  text-align: left;
+  width: 100%;
+  margin-bottom: 80px;
+}
+.eatAndDrink-featuredSection .typo-h4 {
+  margin-top: 40px;
+}
+.eatAndDrink-featuredSection .typo-b1 {
+  margin-bottom: 24px;
+}
+.eatAndDrink-featuredSection__carousel {
+  width: 100%;
+  height: 600px;
+  margin: 60px 0;
+  padding: 24px;
+  background-color: #d9d9d9;
+}
+.eatAndDrink-chefSection {
+  margin-bottom: 80px;
+}
+.eatAndDrink-casinoSection {
+  width: 100%;
+  height: 528px;
+  padding: 72px 24px;
+  background-color: #ebebeb;
+  display: flex;
+}
+.eatAndDrink-casinoSection__img {
+  width: 45%;
+}
+.eatAndDrink-casinoSection__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.eatAndDrink-casinoSection__body {
+  width: 55%;
+  text-align: left;
+  margin-left: 52px;
+}
+.eatAndDrink-casinoSection__body .typo-h1 {
+  margin-top: 0;
+}
+.eatAndDrink-diningSection {
+  height: 600px;
+  display: flex;
+  align-items: center;
+  margin: 80px 0;
+}
+.eatAndDrink-diningSection__body {
+  text-align: left;
+  width: 45%;
+}
+.eatAndDrink-diningSection__img {
+  width: 55%;
+  padding-left: 40px;
+}
+.eatAndDrink-diningSection__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 520px;
 }
 
 header {
@@ -1296,6 +1414,27 @@ header {
   width: 100%;
 }
 .AccomInfoCard h4 {
+  padding: 20px 0;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #211f1a;
+}
+
+.ChefInfoCardContainer {
+  max-width: 1440px;
+  display: flex;
+  text-align: left;
+}
+
+.ChefInfoCard {
+  width: 33%;
+  padding: 16px;
+}
+.ChefInfoCard img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+}
+.ChefInfoCard h4 {
   padding: 20px 0;
   margin-bottom: 20px;
   border-bottom: 1px solid #211f1a;
