--- a/src/scss/pages/_Accommodation.scss
+++ b/src/scss/pages/_Accommodation.scss
@@ -13,6 +13,16 @@
   }
 }
 
+.accommodation-page-container {
+  max-width: 1440px;
+}
+
+.heroSection {
+  width: 1440px;
+  height: 600px;
+  background-color: #d9d9d9;
+}
+
 .accommodation-description {
   text-align: center;
   width: 100%;
@@ -26,6 +36,9 @@
 .accomInfoSection {
   margin: 60px 0;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   &-carousel {
     margin-top: 60px;
     background-color: #d9d9d9;
@@ -36,6 +49,8 @@
 
 .stayPackageSection {
   margin: 100px 0;
+  // max-width: 1440px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   text-align: left;
