--- a/src/scss/pages/_Accommodation.scss
+++ b/src/scss/pages/_Accommodation.scss
@@ -1,86 +1,100 @@
-@use "../abstracts/colors";
+@use "../abstracts/colors" as c;
+@use "../abstracts/layout" as l;
 
 .accommodation-page {
-  background-color: colors.$bg-color;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  .bannerLogo {
-    padding: 24px;
-    width: 100%;
+  width: 100%;
+  background: c.$bg-color;
+  &-container {
+    max-width: 1440px;
+    text-align: center;
   }
 }
 
-.accommodation-page-container {
-  max-width: 1440px;
+.celestial-star {
+  width: 42px;
+  height: 42px;
 }
 
-.heroSection {
-  width: 1440px;
-  height: 600px;
-  background-color: #d9d9d9;
+.paragraph {
+  max-width: 1164px;
 }
 
-.accommodation-description {
-  text-align: center;
-  width: 100%;
-  padding: 0 24px;
-  &-content {
-    max-width: 1080px;
-    margin: 160px auto;
-  }
-}
-
-.accomInfoSection {
-  margin: 60px 0;
-  width: 100%;
+.accommodation-introA-section {
+  margin-top: l.$section-margin;
   display: flex;
   flex-direction: column;
   align-items: center;
-  &-carousel {
-    margin-top: 60px;
-    background-color: #d9d9d9;
-    width: 100%;
-    height: 600px;
+  .introA-imgContainer {
+    margin-bottom: l.$component-margin;
+  }
+  button {
+    margin-top: 40px;
   }
 }
 
-.stayPackageSection {
-  margin: 100px 0;
-  // max-width: 1440px;
-  width: 100%;
+.accommodation-introB-section {
+  margin-top: l.$section-margin;
   display: flex;
   flex-direction: column;
-  text-align: left;
-  .typo-h1 {
-    margin-bottom: 72px;
-  }
-  .typo-b2 {
-    max-width: 528px;
-  }
-  &-carousel {
+  align-items: center;
+  .introB-imgContainer {
+    margin-bottom: l.$component-margin;
     width: 100%;
-    height: 600px;
+    height: 520px;
     background-color: #d9d9d9;
   }
-  &-article {
-    margin: 88px 0;
-    height: 344px;
-    display: flex;
-    align-items: center;
+}
+
+.rooms-section {
+  margin-top: l.$section-margin;
+}
+
+.carouselA-section {
+  margin: l.$section-margin 0;
+}
+
+.flightPackage-section {
+  width: 100%;
+  // height: 400px;
+  display: flex;
+  // flex-wrap: nowrap;
+  justify-content: space-between;
+  &__body {
     text-align: left;
-    .typo-b2 {
-      max-width: 528px;
+    margin-right: 52px;
+    max-width: 420px;
+    .featureTag {
+      background-color: #7feb28;
+      border-radius: 40px;
+      display: inline-block;
+      padding: 8px 20px;
+      font-size: 16px;
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 4px;
+      }
     }
-    div:nth-child(1) {
-      width: 50%;
-    }
-    div:nth-child(2) {
-      width: 50%;
-      height: 100%;
-      background-color: #d9d9d9;
+    h4 {
+      padding-bottom: 20px;
+      margin: 20px 0;
+      border-bottom: 1px solid c.$black-theme;
     }
   }
+  &__image {
+    width: auto;
+    img {
+      object-fit: contain;
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+.hotelExp-section {
+  margin: l.$section-margin 0;
+  height: fit-content;
 }
