--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -438,9 +438,11 @@ $mobile-view: 1060px;
 
   &__body {
     text-align: center;
+    height: 800px;
     width: 70%;
     @media (max-width: $mobile-view) {
       width: 100%;
+      height: 1000px;
       text-align: left;
       padding: 0 24px;
     }
@@ -454,7 +456,8 @@ $mobile-view: 1060px;
       margin: 32px 0;
     }
     a {
-      margin-top: 20px;
+      display: inline-block;
+      margin-top: 54px;
       margin-bottom: 100px;
       @media (max-width: $mobile-view) {
         width: 100%;
