content page update

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,6 +17,7 @@
 @use "./components/ChefInfoCard";
 @use "./components/HeroSection";
 @use "./components/HighlightA";
+@use "./components/CarouselA";
 
 // Abstracts
 @use "./abstracts/colors";
