--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -953,6 +953,66 @@
   height: fit-content;
 }
 
+.eatAndDrink-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background: #fffcfa;
+}
+.eatAndDrink-page-container {
+  max-width: 1440px;
+  text-align: center;
+}
+
+.eatAndDrink-hero-section {
+  position: relative;
+}
+.eatAndDrink-hero-section h1 {
+  width: 400px;
+  height: 140px;
+  position: absolute;
+  color: white;
+  top: calc(50% - 70px);
+  left: calc(50% - 200px);
+}
+
+.eatAndDrink-introA-section {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.eatAndDrink-introA-section button {
+  margin-top: 40px;
+}
+
+.eatAndDrink-carousel-section {
+  margin-top: 80px;
+}
+
+.chefs-info-section {
+  margin-top: 80px;
+}
+
+.eatAndDrink-highlightA-section {
+  margin-top: 80px;
+}
+
+.eatAndDrink-highlightB-section {
+  margin: 80px 0;
+  display: flex;
+  text-align: left;
+}
+.eatAndDrink-highlightB-section__body {
+  margin-left: 40px;
+}
+.eatAndDrink-highlightB-section__body h4 {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #211f1a;
+  margin-bottom: 20px;
+}
+
 .classic-collection-page {
   width: 100%;
   background-color: #fffcfa;
@@ -1481,8 +1541,14 @@ header {
 
 .hero-section {
   width: 100%;
-  height: 590px;
+  max-height: 590px;
   background-color: #d9d9d9;
+}
+.hero-section img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .highlight-typeA {
@@ -1515,10 +1581,14 @@ header {
 }
 .highlight-typeA-img img {
   height: 100%;
-  width: 100%;
+  width: auto;
   border-radius: 12px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.carousel-typeA {
+  width: 100%;
 }
 
 .btn-primary {
