--- a/src/scss/components/_HeroSection.scss
+++ b/src/scss/components/_HeroSection.scss
@@ -1,5 +1,10 @@
 .hero-section {
   width: 100%;
-  height: 590px;
+  max-height: 590px;
   background-color: #d9d9d9;
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
 }
