--- a/src/scss/components/_HighlightA.scss
+++ b/src/scss/components/_HighlightA.scss
@@ -26,9 +26,11 @@
   }
   &-img {
     width: 100%;
+    // height: 100%;
+
     img {
       height: 100%;
-      width: 100%;
+      width: auto;
       border-radius: 12px;
       object-fit: cover;
     }
