--- a/src/scss/pages/_EatAndDrink.scss
+++ b/src/scss/pages/_EatAndDrink.scss
@@ -1,1 +1,63 @@
-@use "../abstracts/colors";
+@use "../abstracts/colors" as c;
+@use "../abstracts/layout" as l;
+
+.eatAndDrink-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background: c.$bg-color;
+  &-container {
+    max-width: 1440px;
+    text-align: center;
+  }
+}
+
+.eatAndDrink-hero-section {
+  position: relative;
+  h1 {
+    width: 400px;
+    height: 140px;
+    position: absolute;
+    color: white;
+    top: calc(50% - 70px);
+    left: calc(50% - 200px);
+  }
+}
+
+.eatAndDrink-introA-section {
+  margin-top: l.$section-margin;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  button {
+    margin-top: 40px;
+  }
+}
+
+.eatAndDrink-carousel-section {
+  margin-top: l.$section-margin;
+}
+
+.chefs-info-section {
+  margin-top: l.$section-margin;
+}
+
+.eatAndDrink-highlightA-section {
+  margin-top: l.$section-margin;
+  //   max-height: 520px;
+}
+
+.eatAndDrink-highlightB-section {
+  margin: l.$section-margin 0;
+  display: flex;
+  text-align: left;
+  &__body {
+    margin-left: 40px;
+    h4 {
+      padding-bottom: 20px;
+      border-bottom: 1px solid c.$black-theme;
+      margin-bottom: 20px;
+    }
+  }
+}
