--- a/src/scss/components/_HighlightA.scss
+++ b/src/scss/components/_HighlightA.scss
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding: 0 24px;
   &-body {
     text-align: left;
     max-width: 420px;
