--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -15,33 +15,59 @@ header {
 .header-wrapper {
   &--desktop {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 1440px;
+    width: 100%;
     @media (max-width: $mobile-view) {
       display: none;
     }
-    ul {
+    .header-logo {
+      width: 100%;
+      height: 60px;
       display: flex;
-      list-style: none;
-      margin: 0;
-      padding-left: 24px;
-      li {
-        padding: 16px 12px;
-        a {
-          text-decoration: none;
-          color: colors.$black-theme;
-          font-size: 16px;
-          font-weight: bold;
-        }
+      justify-content: center;
+      align-items: center;
+      border-bottom: 1px solid black;
+      img {
+        width: 230px;
       }
     }
-    .nav-booking {
-      text-decoration: none;
-      color: colors.$black-theme;
-      font-size: 16px;
-      font-weight: bold;
-      padding: 0 24px;
+    .header-menu {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url(../Images/highlightGradient.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      overflow: hidden;
+      height: 0;
+      &.show {
+        height: 60px;
+      }
+      ul {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        margin: 0;
+        padding-left: 24px;
+        li {
+          padding: 16px 12px;
+          a {
+            color: #211f1a;
+            font-family: Poppins;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            letter-spacing: 3.2px;
+            text-transform: uppercase;
+            text-decoration: none;
+          }
+        }
+      }
     }
   }
 
