--- a/src/scss/pages/_Accommodation.scss
+++ b/src/scss/pages/_Accommodation.scss
@@ -18,6 +18,7 @@
   height: 42px;
 }
 
+// ! globally applied
 .paragraph {
   max-width: 1164px;
 }
@@ -28,7 +29,7 @@
   flex-direction: column;
   align-items: center;
   .introA-imgContainer {
-    margin-bottom: l.$component-margin;
+    margin: l.$component-margin 0;
   }
   button {
     margin-top: 40px;
@@ -43,8 +44,11 @@
   .introB-imgContainer {
     margin-bottom: l.$component-margin;
     width: 100%;
-    height: 520px;
-    background-color: #d9d9d9;
+    max-height: 520px;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
   }
 }
 
@@ -53,6 +57,10 @@
 }
 
 .carouselA-section {
+  margin: l.$section-margin 0;
+}
+
+.carouselB-section {
   margin: l.$section-margin 0;
 }
 
