--- a/src/scss/pages/_ClassicCollection.scss
+++ b/src/scss/pages/_ClassicCollection.scss
@@ -26,8 +26,28 @@
   margin-top: l.$section-margin;
 }
 
-.classic-carousel-section {
+.classic-news-section {
+  background-image: url(../Images/highlightGradient.png);
   margin-top: l.$section-margin;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 60px 80px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  &__img {
+    width: 50%;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
+  }
+  &__body {
+    text-align: left;
+    margin-left: 40px;
+    max-width: 480px;
+    width: 50%;
+  }
 }
 
 .classic-highlightA {
