--- a/src/scss/components/_CarouselB.scss
+++ b/src/scss/components/_CarouselB.scss
@@ -1,7 +1,7 @@
 .carouselB {
   width: 100%;
   padding: 24px;
-  background-image: url(../Images/home-gradient.svg);
+  background-image: url(../Images/highlightGradient.png);
   background-size: cover;
   background-repeat: no-repeat;
   object-fit: contain;
